--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,11 +14,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@vinicius-ignite-design-system/eslint-config": "*",
     "@vinicius-ignite-design-system/tokens": "*",
     "@vinicius-ignite-design-system/ts-config": "*",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
@@ -26,6 +26,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-tooltip": "^1.0.3",
     "@stitches/react": "^1.2.8",
     "phosphor-react": "^1.4.1"
   }
