--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.3",
